# 3b-tree

./: .gitignore  CMakeLists.txt  README.md  main.cpp
bench/: benchmark.cpp  bm_bbbtree.cpp  bm_bbbtree_bulkload.cpp  bm_bbbtree_from_scratch.cpp  bm_bbbtree_insert.cpp  bm_database.cpp  bm_database_from_scratch.cpp  bm_pageviews.cpp  helpers.cpp  helpers.h  local.cmake
data/: analytics.ipynb  analyze_evictions copy.ipynb  analyze_evictions.ipynb  generate_workload.ipynb
include/: local.cmake
include/bbbtree/: bbbtree.h  btree.h  btree_with_tracking.h  buffer_manager.h  database.h  delta.h  file.h  logger.h  map.h  segment.h  slotted_page.h  stats.h  tuple_id.h  types.h
plots/: latex_tables.py  plot.py  plot_btree_vs_bbbtree.py  plot_buffer_accesses.py  plot_buffer_hits_misses.py  plot_buffer_sizes.py  plot_pages_written.py  plot_total_io.py  plot_total_io_multi.py  plot_update_ratios.py  plot_update_ratios_improvement.py  plot_write_thresholds.py  plot_write_thresholds_improvement.py  results.json  show_results.py
src/: bbbtree.cpp  btree.cpp  btree_with_tracking.cpp  buffer_manager.cpp  database.cpp  delta.cpp  local.cmake  logger.cpp  map.cpp  segment.cpp  slotted_page.cpp  stats.cpp  tuple_id.cpp  types.cpp
src/file/: posix_file.cc
tests/: bbbtree_test.cpp  btree_test.cpp  buffer_manager_test.cpp  database_test.cpp  delta_test.cpp  local.cmake  map_test.cpp  segment_test.cpp  slotted_page_test.cpp  tester.cpp
